More nav resposive fixes, due to it squashing the coloured icon boxes

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -667,7 +667,7 @@ hr {
         bottom:0;
         border:1px solid $estyn-lightblue;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             top: 100%;
             width: 100%;
         }
